[Feature] Enable chat via openai in notebook

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "6bd0166d-e107-4dc3-a95d-f72a5357e3d2",
    "metadata": {
     "editable": true,
@@ -11,41 +11,35 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Repo path:   [E:\\_codes\\GPT-Paper]\n",
+      "INFO:utils.logger:Repo path:   [E:\\_codes\\GPT-Paper]\n",
+      "Working dir: [E:\\_codes\\GPT-Paper\\notebook]\n",
+      "INFO:utils.logger:Working dir: [E:\\_codes\\GPT-Paper\\notebook]\n",
+      "Notebook Path: [E:\\_codes\\GPT-Paper\\notebook\\review_writer.ipynb]\n",
+      "INFO:utils.logger:Notebook Path: [E:\\_codes\\GPT-Paper\\notebook\\review_writer.ipynb]\n",
+      "Now: [2023-09-04 00:09:30.133441]\n",
+      "INFO:utils.logger:Now: [2023-09-04 00:09:30.133441]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Run this cell when initialized\n",
     "%load_ext autoreload\n",
     "%autoreload\n",
     "\n",
-    "import datetime\n",
-    "import os\n",
-    "import sys\n",
-    "from pathlib import Path\n",
-    "import logging\n",
-    "import ipynbname\n",
-    "\n",
-    "repo_path = Path(os.path.abspath(\".\")).parent\n",
-    "if str(repo_path) not in sys.path:\n",
-    "    sys.path.append(str(repo_path))\n",
-    "work_dir = Path().absolute()\n",
-    "ipynb_path = ipynbname.path()\n",
-    "\n",
-    "import jupyter_black\n",
-    "import ipywidgets as widgets\n",
-    "from importlib import reload\n",
-    "from IPython.display import display\n",
-    "from IPython.display import Javascript\n",
-    "from ipywidgets import Image as wImage\n",
-    "from ipywidgets import HBox, Layout\n",
-    "from utils.logger import logger\n",
-    "from termcolor import colored\n",
-    "\n",
-    "\n",
-    "jupyter_black.load(lab=True)\n",
-    "logger.note(f\"Repo path:   [{repo_path}]\")\n",
-    "logger.note(f\"Working dir: [{work_dir}]\")\n",
-    "logger.note(f\"Notebook Path: [{ipynb_path}]\")\n",
-    "logger.note(f\"Now: [{datetime.datetime.now()}]\")"
+    "%run -i \"startup.py\""
    ]
   },
   {
@@ -186,17 +180,83 @@
     "tags": []
    },
    "source": [
-    "# Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications"
+    "# Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancer applications"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0e88ebf3-ecfd-4691-964e-5238ac73af19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line: lineee=x, line2=s\n",
+      "cell: system_message = \"This is system Message\"\n",
+      "\n",
+      "above_content:  # Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications\n",
+      "system_message: None\n"
+     ]
+    }
+   ],
    "source": [
-    "%lsmagic"
+    "%%chat lineee=x, line2=s\n",
+    "system_message = \"This is system Message\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "182a501c-bf98-4880-bc66-b49635710138",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line: xx\n",
+      "cell: None\n",
+      "above_content:  %%chat lineee=x, line2=s\n",
+      "system_message = \"This is system Message\"\n",
+      "system_message: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "%chat xx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b11f8dbe-8f3e-437b-9ecc-2bc00bb17d0f",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'system', 'content': '你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：'}, {'role': 'user', 'content': 'Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications'}]\n",
+      "assistant: 揭开人工智能基于病理学分析肝癌应用的“黑匣子”\n"
+     ]
+    }
+   ],
+   "source": [
+    "translate_agent = OpenAIAgent(\n",
+    "    name=\"translator\",\n",
+    "    system_message=\"你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：\",\n",
+    ")\n",
+    "translate_agent.chat(\n",
+    "    \"Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications\"\n",
+    ")"
    ]
   }
  ],
@@ -217,6 +277,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
