[Backup] ReviewWriter: tranlate agent

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "6bd0166d-e107-4dc3-a95d-f72a5357e3d2",
    "metadata": {
     "editable": true,
@@ -30,8 +30,8 @@
       "INFO:utils.logger:Working dir: [E:\\_codes\\GPT-Paper\\notebook]\n",
       "Notebook Path: [E:\\_codes\\GPT-Paper\\notebook\\review_writer.ipynb]\n",
       "INFO:utils.logger:Notebook Path: [E:\\_codes\\GPT-Paper\\notebook\\review_writer.ipynb]\n",
-      "Now: [2023-09-04 00:09:30.133441]\n",
-      "INFO:utils.logger:Now: [2023-09-04 00:09:30.133441]\n"
+      "Now: [2023-09-04 02:01:47.309920]\n",
+      "INFO:utils.logger:Now: [2023-09-04 02:01:47.309920]\n"
      ]
     }
    ],
@@ -164,7 +164,13 @@
   {
    "cell_type": "markdown",
    "id": "bce80c78-f9d6-4e1a-b0d4-3e4c30dc355a",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "This is a text block"
    ]
@@ -230,10 +236,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "b11f8dbe-8f3e-437b-9ecc-2bc00bb17d0f",
    "metadata": {
     "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%autoreload\n",
+    "translate_agent = OpenAIAgent(\n",
+    "    name=\"translator\",\n",
+    "    system_message=\"你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2291a0ec-538c-4b82-ac9e-7ab1f1123617",
+   "metadata": {
+    "editable": true,
+    "scrolled": true,
     "slideshow": {
      "slide_type": ""
     },
@@ -244,19 +271,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'role': 'system', 'content': '你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：'}, {'role': 'user', 'content': 'Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications'}]\n",
-      "assistant: 揭开人工智能基于病理学分析肝癌应用的“黑匣子”\n"
+      "[{'content': '你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：',\n",
+      "  'role': 'system'},\n",
+      " {'content': 'Unraveling the “black-box” of artificial intelligence-based '\n",
+      "             'pathological analysis of liver cancerapplications',\n",
+      "  'role': 'user'}]\n",
+      "[Translator]: 揭开基于人工智能的肝癌病理分析的“黑匣子”应用\n",
+      "[Completed]\n",
+      "[{'content': '你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：',\n",
+      "  'role': 'system'},\n",
+      " {'content': 'Including Occlusion sensitivity map (OSM), local interpretable '\n",
+      "             'model-agnostic explannations (LIME)',\n",
+      "  'role': 'user'}]\n",
+      "[Translator]: 包括遮挡敏感度图（OSM）和局部可解释的模型无关解释（LIME）\n",
+      "[Completed]\n"
      ]
     }
    ],
    "source": [
-    "translate_agent = OpenAIAgent(\n",
-    "    name=\"translator\",\n",
-    "    system_message=\"你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：\",\n",
-    ")\n",
     "translate_agent.chat(\n",
     "    \"Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications\"\n",
+    ")\n",
+    "translate_agent.chat(\n",
+    "    \"Including Occlusion sensitivity map (OSM), local interpretable model-agnostic explannations (LIME)\",\n",
+    "    memory=False,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "83afd86d-3bb1-4735-b661-19c514f244fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'system',\n",
+       "  'content': '你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：'},\n",
+       " {'role': 'user',\n",
+       "  'content': 'Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications'},\n",
+       " {'role': 'assistant', 'content': '揭开基于人工智能的肝癌病理分析的“黑匣子”应用'},\n",
+       " {'role': 'user',\n",
+       "  'content': 'Including Occlusion sensitivity map (OSM), local interpretable model-agnostic explannations (LIME)'},\n",
+       " {'role': 'assistant', 'content': '包括遮挡敏感度图（OSM）和局部可解释的模型无关解释（LIME）'}]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate_agent.history_messages"
    ]
   }
  ],
