--- a/notebook/review_doc.ipynb
+++ b/notebook/review_doc.ipynb
@@ -15,9 +15,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "38c7f419-e732-4007-bc63-8ab9597110f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'# Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_above_cell_content()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a3709179-f1f3-4d0a-acc4-0848b8289664",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## Current advances of AI-based approaches for clinical management of liver cancer\n",
     "\n",
@@ -115,6 +142,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
