[Config] Jupyter Notebook in Linux

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "6bd0166d-e107-4dc3-a95d-f72a5357e3d2",
    "metadata": {
     "editable": true,
@@ -13,25 +13,23 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[95mRepo path:   [/mnt/sh_flex_storage/home/zehanyu/repos/GPT-Paper]\u001b[0m\n",
+      "INFO:utils.logger:\u001b[95mRepo path:   [/mnt/sh_flex_storage/home/zehanyu/repos/GPT-Paper]\u001b[0m\n",
+      "\u001b[95mWorking dir: [/mnt/sh_flex_storage/home/zehanyu/repos/GPT-Paper/notebook]\u001b[0m\n",
+      "INFO:utils.logger:\u001b[95mWorking dir: [/mnt/sh_flex_storage/home/zehanyu/repos/GPT-Paper/notebook]\u001b[0m\n",
+      "\u001b[95mNow: [2023-09-04 14:36:11.640899]\u001b[0m\n",
+      "INFO:utils.logger:\u001b[95mNow: [2023-09-04 14:36:11.640899]\u001b[0m\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Repo path:   [E:\\_codes\\GPT-Paper]\n",
-      "INFO:utils.logger:Repo path:   [E:\\_codes\\GPT-Paper]\n",
-      "Working dir: [E:\\_codes\\GPT-Paper\\notebook]\n",
-      "INFO:utils.logger:Working dir: [E:\\_codes\\GPT-Paper\\notebook]\n",
-      "Notebook Path: [E:\\_codes\\GPT-Paper\\notebook\\review_writer.ipynb]\n",
-      "INFO:utils.logger:Notebook Path: [E:\\_codes\\GPT-Paper\\notebook\\review_writer.ipynb]\n",
-      "Now: [2023-09-04 02:01:47.309920]\n",
-      "INFO:utils.logger:Now: [2023-09-04 02:01:47.309920]\n"
      ]
     }
    ],
@@ -236,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "b11f8dbe-8f3e-437b-9ecc-2bc00bb17d0f",
    "metadata": {
     "editable": true,
@@ -256,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "2291a0ec-538c-4b82-ac9e-7ab1f1123617",
    "metadata": {
     "editable": true,
@@ -276,14 +274,14 @@
       " {'content': 'Unraveling the “black-box” of artificial intelligence-based '\n",
       "             'pathological analysis of liver cancerapplications',\n",
       "  'role': 'user'}]\n",
-      "[Translator]: 揭开基于人工智能的肝癌病理分析的“黑匣子”应用\n",
+      "[Translator]: 揭开基于人工智能的肝癌病理分析“黑匣子”的内部机制。\n",
       "[Completed]\n",
       "[{'content': '你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：',\n",
       "  'role': 'system'},\n",
       " {'content': 'Including Occlusion sensitivity map (OSM), local interpretable '\n",
       "             'model-agnostic explannations (LIME)',\n",
       "  'role': 'user'}]\n",
-      "[Translator]: 包括遮挡敏感度图（OSM）和局部可解释的模型无关解释（LIME）\n",
+      "[Translator]: 包括遮挡敏感性地图（OSM）和局部可解释的模型无关解释（LIME）。\n",
       "[Completed]\n"
      ]
     }
@@ -300,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "83afd86d-3bb1-4735-b661-19c514f244fa",
    "metadata": {},
    "outputs": [
@@ -311,13 +309,13 @@
        "  'content': '你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：'},\n",
        " {'role': 'user',\n",
        "  'content': 'Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications'},\n",
-       " {'role': 'assistant', 'content': '揭开基于人工智能的肝癌病理分析的“黑匣子”应用'},\n",
+       " {'role': 'assistant', 'content': '揭开基于人工智能的肝癌病理分析“黑匣子”的内部机制。'},\n",
        " {'role': 'user',\n",
        "  'content': 'Including Occlusion sensitivity map (OSM), local interpretable model-agnostic explannations (LIME)'},\n",
-       " {'role': 'assistant', 'content': '包括遮挡敏感度图（OSM）和局部可解释的模型无关解释（LIME）'}]"
+       " {'role': 'assistant', 'content': '包括遮挡敏感性地图（OSM）和局部可解释的模型无关解释（LIME）。'}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
