[Feature] Define multiple agents in notebook

--- a/notebook/review_doc.ipynb
+++ b/notebook/review_doc.ipynb
@@ -15,27 +15,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "38c7f419-e732-4007-bc63-8ab9597110f5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'# Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_above_cell_content()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a3709179-f1f3-4d0a-acc4-0848b8289664",
    "metadata": {
@@ -52,8 +31,14 @@
     "\n",
     "### Molecular profiling of liver cancer via AI\n",
     "\n",
-    "### Exploring predictive indicators for therapy response\n",
-    "\n",
+    "### Exploring predictive indicators for therapy response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cec2a692-1313-4f49-8fb1-3320fad4c90c",
+   "metadata": {},
+   "source": [
     "## Current challenges limiting AI-based approaches in the management of liver cancer\n",
     "\n",
     "(One paragraph highlighting the urgent need to explain the “bldeep learningcre applications"
@@ -109,20 +94,6 @@
    "source": [
     "## Conclusion and future applications"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7cf23e5-7780-467c-826c-c45966197d2b",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -141,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
