--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "6bd0166d-e107-4dc3-a95d-f72a5357e3d2",
    "metadata": {
     "editable": true,
@@ -13,287 +13,102 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[95mRepo path:   [/mnt/sh_flex_storage/home/zehanyu/repos/GPT-Paper]\u001b[0m\n",
-      "INFO:utils.logger:\u001b[95mRepo path:   [/mnt/sh_flex_storage/home/zehanyu/repos/GPT-Paper]\u001b[0m\n",
-      "\u001b[95mWorking dir: [/mnt/sh_flex_storage/home/zehanyu/repos/GPT-Paper/notebook]\u001b[0m\n",
-      "INFO:utils.logger:\u001b[95mWorking dir: [/mnt/sh_flex_storage/home/zehanyu/repos/GPT-Paper/notebook]\u001b[0m\n",
-      "\u001b[95mNow: [2023-09-04 14:36:11.640899]\u001b[0m\n",
-      "INFO:utils.logger:\u001b[95mNow: [2023-09-04 14:36:11.640899]\u001b[0m\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "  %reload_ext autoreload\n",
+      "Repo path:   [E:\\_codes\\GPT-Paper]\n",
+      "Working dir: [E:\\_codes\\GPT-Paper\\notebook]\n",
+      "Notebook Path: [E:\\_codes\\GPT-Paper\\notebook\\review_writer.ipynb]\n",
+      "Now: [2023-09-05 01:07:39.163255]\n"
      ]
     }
    ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload\n",
+    "%run -i \"startup.py\"\n",
     "\n",
-    "%run -i \"startup.py\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1739b204-98a3-4775-ba26-c27609c98816",
-   "metadata": {
-    "editable": true,
-    "jupyterlab-hide-cells:hidden": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from notebook_ui import set_background\n",
-    "\n",
-    "# pdf_dir = \"Deep learning predicts postsurgical recurrence of hepatocellular carcinoma from digital histopathologic images\"\n",
-    "\n",
-    "pdf_dir = \"2308.09687 - Graph of Thoughts\"\n",
-    "\n",
-    "image_paths = [\n",
-    "    f\n",
-    "    for f in (\n",
-    "        repo_path\n",
-    "        / \"pdfs\"\n",
-    "        / pdf_dir\n",
-    "        / \"queries\"\n",
-    "        / \"Tree of Thoughts vs Graph of Thoughts\"\n",
-    "    ).glob(\"*.png\")\n",
-    "]\n",
-    "images = [\n",
-    "    wImage(value=image_path.open(\"rb\").read(), format=\"png\", width=400)\n",
-    "    for image_path in image_paths\n",
-    "]\n",
-    "\n",
-    "dp(HBox(images))\n",
-    "set_background(\"black\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81278999-a9bc-4416-9a55-c6f7306e049e",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "pdf_root = Path(os.path.abspath(\".\")).parent / \"pdfs\"\n",
-    "print(f\"PDFs root: {str(pdf_root)}\")\n",
-    "\n",
-    "pdf_paths = pdf_root.glob(\"*.pdf\")\n",
-    "pdf_path_checkboxes = [\n",
-    "    widgets.Checkbox(\n",
-    "        value=False,\n",
-    "        description=pdf_path.name,\n",
-    "        disabled=False,\n",
-    "        indent=False,\n",
-    "        layout=widgets.Layout(width=\"auto\"),\n",
-    "    )\n",
-    "    for pdf_path in pdf_paths\n",
-    "]\n",
-    "\n",
-    "for pdf_path_checkbox in pdf_path_checkboxes:\n",
-    "    dp(pdf_path_checkbox)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc07ad82-2aae-4114-b21d-bbb88b9ec642",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "for pdf_path_checkbox in pdf_path_checkboxes:\n",
-    "    if pdf_path_checkbox.value:\n",
-    "        logger.mesg(pdf_path_checkbox.description)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52f3412b-4807-4014-9b71-2af6362a70c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%autoreload\n",
-    "import asyncio\n",
-    "import nest_asyncio\n",
-    "\n",
-    "nest_asyncio.apply()\n",
-    "\n",
-    "from agents.openai import OpenAIAgent\n",
-    "\n",
-    "asyncio.set_event_loop_policy(asyncio.WindowsSelectorEventLoopPolicy())\n",
-    "\n",
-    "agent = OpenAIAgent()\n",
-    "\n",
-    "asyncio.run(agent.test_prompt())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2edd2249-03b5-4aa9-b3c3-ff71252691ff",
-   "metadata": {},
-   "source": [
-    "## This is a title block."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bce80c78-f9d6-4e1a-b0d4-3e4c30dc355a",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "This is a text block"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9cf3b0d8-7e97-49db-af52-db3df15a9743",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "# Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancer applications"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "0e88ebf3-ecfd-4691-964e-5238ac73af19",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "line: lineee=x, line2=s\n",
-      "cell: system_message = \"This is system Message\"\n",
-      "\n",
-      "above_content:  # Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications\n",
-      "system_message: None\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%chat lineee=x, line2=s\n",
-    "system_message = \"This is system Message\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "182a501c-bf98-4880-bc66-b49635710138",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "line: xx\n",
-      "cell: None\n",
-      "above_content:  %%chat lineee=x, line2=s\n",
-      "system_message = \"This is system Message\"\n",
-      "system_message: None\n"
-     ]
-    }
-   ],
-   "source": [
-    "%chat xx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "b11f8dbe-8f3e-437b-9ecc-2bc00bb17d0f",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%autoreload\n",
-    "translate_agent = OpenAIAgent(\n",
+    "prompter = OpenAIAgent(\n",
+    "    name=\"prompter\",\n",
+    "    model=\"gpt-4\",\n",
+    "    system_message=\"你是一个擅长为大语言模型（LLM）撰写提示词（prompts）的专家。对于提供的文本，你总是能给出更易于LLM生成优质回复的prompts。下面是给出的文本：\",\n",
+    ")\n",
+    "translator = OpenAIAgent(\n",
     "    name=\"translator\",\n",
+    "    model=\"gpt-3.5-turbo\",\n",
     "    system_message=\"你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：\",\n",
-    ")"
+    "    memory=False,\n",
+    ")\n",
+    "summarizer = OpenAIAgent(\n",
+    "    name=\"summarizer\",\n",
+    "    system_message=\"你是一个擅长总结医学文章的医学专家。对于提供的文本，你总是能给出易于理解和总结。下面是提供的文本：\",\n",
+    ")\n",
+    "retriver = OpenAIAgent(\n",
+    "    name=\"retriever\",\n",
+    "    system_message=\"你的任务是生成与提供的文本内容相近的文本。对于提供的文本，你总是给出三条长度和意思相近的文本。下面是提供的文本：\",\n",
+    ")\n",
+    "outliner = OpenAIAgent(\n",
+    "    name=\"outliner\",\n",
+    "    system_message=\"你的任务是针对给定的文本和话题，生成大纲。下面是提供的文本：\",\n",
+    ")\n",
+    "polisher = OpenAIAgent(\n",
+    "    name=\"polisher\", system_message=\"你的任务是针对提供的文本，进行逻辑和表达上的润色。润色后的内容应当更加严谨和丰富。下面是提供的文本：\"\n",
+    ")\n",
+    "backtracker = OpenAIAgent(\n",
+    "    name=\"backtracker\",\n",
+    "    system_message=\"你的任务是根据提供的文本，猜测该段文本可能源于什么场景或问题。请给出三个可能的选项。下面是提供的文本：\",\n",
+    ")\n",
+    "tasker = OpenAIAgent(name=\"tasker\", system_message=\"你擅长将一个大任务分解成子任务。下面是任务内容：\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "2291a0ec-538c-4b82-ac9e-7ab1f1123617",
    "metadata": {
     "editable": true,
-    "scrolled": true,
     "slideshow": {
      "slide_type": ""
     },
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "main_title = \"Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications\"\n",
+    "translator.chat(main_title, show_prompt=True)\n",
+    "# outliner_res = outliner.chat(main_title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c524d457-b590-48f8-a346-471f32ac85e7",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'content': '你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：',\n",
-      "  'role': 'system'},\n",
-      " {'content': 'Unraveling the “black-box” of artificial intelligence-based '\n",
-      "             'pathological analysis of liver cancerapplications',\n",
-      "  'role': 'user'}]\n",
-      "[Translator]: 揭开基于人工智能的肝癌病理分析“黑匣子”的内部机制。\n",
-      "[Completed]\n",
-      "[{'content': '你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：',\n",
-      "  'role': 'system'},\n",
-      " {'content': 'Including Occlusion sensitivity map (OSM), local interpretable '\n",
-      "             'model-agnostic explannations (LIME)',\n",
-      "  'role': 'user'}]\n",
-      "[Translator]: 包括遮挡敏感性地图（OSM）和局部可解释的模型无关解释（LIME）。\n",
-      "[Completed]\n"
+      "[Retriever]: 1. Shedding light on the enigmatic AI algorithms used in liver cancer pathology analysis.\n",
+      "2. Peering inside the AI \"black-box\" for liver cancer diagnosis insights.\n",
+      "3. Deciphering the mysteries of AI in the pathological analysis of liver cancer.\n"
      ]
     }
    ],
    "source": [
-    "translate_agent.chat(\n",
-    "    \"Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications\"\n",
-    ")\n",
-    "translate_agent.chat(\n",
-    "    \"Including Occlusion sensitivity map (OSM), local interpretable model-agnostic explannations (LIME)\",\n",
-    "    memory=False,\n",
-    ")"
+    "retriver_res = retriver.chat(main_title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69832b2e-03fd-42c5-afd2-b9ae7ca971a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summarizer_res = summarizer.chat(outliner_res)"
    ]
   },
   {
@@ -309,10 +124,10 @@
        "  'content': '你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：'},\n",
        " {'role': 'user',\n",
        "  'content': 'Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications'},\n",
-       " {'role': 'assistant', 'content': '揭开基于人工智能的肝癌病理分析“黑匣子”的内部机制。'},\n",
+       " {'role': 'assistant', 'content': '揭开基于人工智能的肝癌病理分析的“黑匣子”应用'},\n",
        " {'role': 'user',\n",
        "  'content': 'Including Occlusion sensitivity map (OSM), local interpretable model-agnostic explannations (LIME)'},\n",
-       " {'role': 'assistant', 'content': '包括遮挡敏感性地图（OSM）和局部可解释的模型无关解释（LIME）。'}]"
+       " {'role': 'assistant', 'content': '包括遮挡敏感度图（OSM）和局部可解释的模型无关解释（LIME）'}]"
       ]
      },
      "execution_count": 17,
@@ -321,7 +136,15 @@
     }
    ],
    "source": [
-    "translate_agent.history_messages"
+    "translator.history_messages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2edd2249-03b5-4aa9-b3c3-ff71252691ff",
+   "metadata": {},
+   "source": [
+    "# Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications"
    ]
   }
  ],
@@ -341,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
