[Enhance] Improve definitions of agents, and write a typical workflow

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "6bd0166d-e107-4dc3-a95d-f72a5357e3d2",
    "metadata": {
     "editable": true,
@@ -21,7 +21,7 @@
       "Repo path:   [E:\\_codes\\GPT-Paper]\n",
       "Working dir: [E:\\_codes\\GPT-Paper\\notebook]\n",
       "Notebook Path: [E:\\_codes\\GPT-Paper\\notebook\\review_writer.ipynb]\n",
-      "Now: [2023-09-05 01:07:39.163255]\n"
+      "Now: [2023-09-05 01:22:11.630481]\n"
      ]
     }
    ],
@@ -39,14 +39,15 @@
     "    name=\"translator\",\n",
     "    model=\"gpt-3.5-turbo\",\n",
     "    system_message=\"你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：\",\n",
-    "    memory=False,\n",
     ")\n",
     "summarizer = OpenAIAgent(\n",
     "    name=\"summarizer\",\n",
+    "    model=\"gpt-4\",\n",
     "    system_message=\"你是一个擅长总结医学文章的医学专家。对于提供的文本，你总是能给出易于理解和总结。下面是提供的文本：\",\n",
+    "    memory=True,\n",
     ")\n",
-    "retriver = OpenAIAgent(\n",
-    "    name=\"retriever\",\n",
+    "synonymer = OpenAIAgent(\n",
+    "    name=\"synonymer\",\n",
     "    system_message=\"你的任务是生成与提供的文本内容相近的文本。对于提供的文本，你总是给出三条长度和意思相近的文本。下面是提供的文本：\",\n",
     ")\n",
     "outliner = OpenAIAgent(\n",
@@ -54,13 +55,22 @@
     "    system_message=\"你的任务是针对给定的文本和话题，生成大纲。下面是提供的文本：\",\n",
     ")\n",
     "polisher = OpenAIAgent(\n",
-    "    name=\"polisher\", system_message=\"你的任务是针对提供的文本，进行逻辑和表达上的润色。润色后的内容应当更加严谨和丰富。下面是提供的文本：\"\n",
+    "    name=\"polisher\",\n",
+    "    system_message=\"你的任务是针对提供的文本，进行逻辑和表达上的润色。润色后的内容应当更加严谨和丰富。下面是提供的文本：\",\n",
+    ")\n",
+    "criticizer = OpenAIAgent(\n",
+    "    name=\"criticizer\",\n",
+    "    system_message=\"你的任务是针对提供的文本，分别给出三类批评：对观点的批评，对逻辑的批评，对表达的批评。下面是提供的文本：\",\n",
     ")\n",
     "backtracker = OpenAIAgent(\n",
     "    name=\"backtracker\",\n",
     "    system_message=\"你的任务是根据提供的文本，猜测该段文本可能源于什么场景或问题。请给出三个可能的选项。下面是提供的文本：\",\n",
     ")\n",
-    "tasker = OpenAIAgent(name=\"tasker\", system_message=\"你擅长将一个大任务分解成子任务。下面是任务内容：\")\n"
+    "tasker = OpenAIAgent(\n",
+    "    name=\"tasker\",\n",
+    "    model=\"gpt-4\",\n",
+    "    system_message=\"你擅长将一个大任务分解成多个连续的子任务。下面是任务内容：\",\n",
+    ")"
    ]
   },
   {
@@ -76,7 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "main_title = \"Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications\"\n",
+    "main_title = \"Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancer applications\"\n",
     "translator.chat(main_title, show_prompt=True)\n",
     "# outliner_res = outliner.chat(main_title)"
    ]
@@ -112,39 +122,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "83afd86d-3bb1-4735-b661-19c514f244fa",
+   "cell_type": "raw",
+   "id": "942bbdb9-1bb2-496a-9881-bc542f4e7779",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'role': 'system',\n",
-       "  'content': '你是一个专业的中英双语专家。如果给出英文，你需要如实翻译成中文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：'},\n",
-       " {'role': 'user',\n",
-       "  'content': 'Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications'},\n",
-       " {'role': 'assistant', 'content': '揭开基于人工智能的肝癌病理分析的“黑匣子”应用'},\n",
-       " {'role': 'user',\n",
-       "  'content': 'Including Occlusion sensitivity map (OSM), local interpretable model-agnostic explannations (LIME)'},\n",
-       " {'role': 'assistant', 'content': '包括遮挡敏感度图（OSM）和局部可解释的模型无关解释（LIME）'}]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "translator.history_messages"
+    "A typical workflow of generate a detailed review of a section title:\n",
+    "1. [Agent] Synonymer: Generate similar texts\n",
+    "2. [Program] Retrieve and Re-rank from local embbedings of docs\n",
+    "3. [Agent] Summarizer: Summarize the above content into a section\n",
+    "4. [Agent] Polisher: Polish the content of the section"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2edd2249-03b5-4aa9-b3c3-ff71252691ff",
-   "metadata": {},
+   "id": "df4cf78b-92a0-4d92-9584-9b64ec8d9d3f",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "# Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications"
+    "# Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancer\n",
+    "\n",
+    "## Current advances of AI-based approaches for clinical management of liver cancer\n",
+    "\n",
+    "### AI-based prognostication of liver cancer\n",
+    "\n",
+    "### Molecular profiling of liver cancer via AI\n",
+    "\n",
+    "### Exploring predictive indicators for therapy response\n",
+    "\n",
+    "## Current challenges limiting AI-based approaches in the management of liver cancer\n",
+    "\n",
+    "(One paragraph highlighting the urgent need to explain the “black box” of deeplearning)\n",
+    "\n",
+    "## Strategies for unraveling the “black-box” of AI-based\n",
+    "\n",
+    "### Model-based explanation\n",
+    "1. Support vector machine or random forests vs. deep learning\n",
+    "2. Supervised learning vs. weakly supervised learning vs. unsupervised learning\n",
+    "3. Textual explanation\n",
+    "   a. Image captioning\n",
+    "   b. Image captioning with visual explanation\n",
+    "4. Example-based explanation \n",
+    "   a. Triplet network\n",
+    "   b. Prototypes\n",
+    "\n",
+    "### Post hoc explanation\n",
+    "1. Visual explanation (saliency mapping, pathologist-in-the-loop)\n",
+    "   a. Backpropagation-based approaches\n",
+    "      Including class activation mapping (CAM) and gradient-weighted class activation mapping (Grad-CAM)\n",
+    "   b. Perturbation-based approaches\n",
+    "      Including Occlusion sensitivity map (OSM), local interpretable model-agnostic explannations (LIME)\n",
+    "   c. Multiple instance learning-based approaches\n",
+    "2. Textual explanation\n",
+    "   Testing with concept activation vectors (TCAV)\n",
+    "3. Example-based explanation\n",
+    "   a. Influence functions\n",
+    "   b. ...\n",
+    "\n",
+    "## Conclusion and future applications"
    ]
   }
  ],
