[Feature] Hovered text of references

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -708,6 +708,114 @@
     "    section_2, section_2_queries\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "b7e0c079-e5f4-414f-8f60-65dff0d7ed6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<!DOCTYPE html>\n",
+       "<html>\n",
+       "<head>\n",
+       "<style>\n",
+       "    .tooltip {\n",
+       "        position: relative;\n",
+       "        display: inline-block;\n",
+       "    }\n",
+       "    .tooltip .tooltiptext {\n",
+       "        visibility: hidden;\n",
+       "        white-space:pre;\n",
+       "        background-color: rgba(100,100,0,0.8);\n",
+       "        color: white;\n",
+       "        text-align: center;\n",
+       "        border-radius: 2px;\n",
+       "        padding: 5px 0;\n",
+       "        \n",
+       "        position: absolute;\n",
+       "        z-index: 400;\n",
+       "    }\n",
+       "    .tooltip:hover .tooltiptext {\n",
+       "        visibility: visible;\n",
+       "    }\n",
+       "    .tooltip:hover {\n",
+       "        background-color: rgba(0,100,100,0.8);\n",
+       "    }\n",
+       "</style>\n",
+       "</head>\n",
+       "<body>\n",
+       "\n",
+       "<p>This is a paragraph with numbered references. Here is reference number <span class=\"tooltip\">1<span class=\"tooltiptext\">This is the referred text for reference number 1.</span></span>\n",
+       "\n",
+       "<br />\n",
+       "and here is reference number <span class=\"tooltip\">2<span class=\"tooltiptext\">This is the referred text for reference number 2.</span></span>.</p>\n",
+       "\n",
+       "</body>\n",
+       "</html>\n",
+       "\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(\n",
+    "    HTML(\n",
+    "        \"\"\"\n",
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "<style>\n",
+    "    .tooltip {\n",
+    "        position: relative;\n",
+    "        display: inline-block;\n",
+    "    }\n",
+    "    .tooltip .tooltiptext {\n",
+    "        visibility: hidden;\n",
+    "        white-space:pre;\n",
+    "        background-color: rgba(100,100,0,0.8);\n",
+    "        color: white;\n",
+    "        text-align: center;\n",
+    "        border-radius: 2px;\n",
+    "        padding: 5px 0;\n",
+    "        \n",
+    "        position: absolute;\n",
+    "        z-index: 400;\n",
+    "    }\n",
+    "    .tooltip:hover .tooltiptext {\n",
+    "        visibility: visible;\n",
+    "    }\n",
+    "    .tooltip:hover {\n",
+    "        background-color: rgba(0,100,100,0.8);\n",
+    "    }\n",
+    "</style>\n",
+    "</head>\n",
+    "<body>\n",
+    "\n",
+    "<p>This is a paragraph with numbered references. Here is reference number <span class=\"tooltip\">1<span class=\"tooltiptext\">This is the referred text for reference number 1.</span></span>\n",
+    "\n",
+    "<br />\n",
+    "and here is reference number <span class=\"tooltip\">2<span class=\"tooltiptext\">This is the referred text for reference number 2.</span></span>.</p>\n",
+    "\n",
+    "</body>\n",
+    "</html>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "    )\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
